app/assets/stylesheets/media.scss
@import 'common';
@import 'modules/auth_link';
@import 'modules/thumb_slider';

.#{$namespace}-media {
  min-height: 175px;
  position: relative;
  text-align: center;

  audio { width: 100%; }

  .#{$namespace}-many-media {
    margin-bottom: 24px;
  }
}

.#{$namespace}-media-slider-thumb {
  height: 75px;
  text-align: left;

  &.active {
    border: 1px solid $color-cardinal-red;
  }

  i {
    color: $color-pantone-401;
    float: left;
    font-size: 75px;
    line-height: 1;
    margin-left: -6px;
  }

  .#{$namespace}-thumb-label {
    float: right;
    height: 75px;
    overflow: hidden;
    white-space: pre-wrap;
    white-space: -moz-pre-wrap;
    white-space: -pre-wrap;
    white-space: -o-pre-wrap;
    width: 100px;
    word-wrap: break-word;
  }

  .#{$namespace}-thumb-stanford-only {
    @include stanford-only;
    background-position: left 4px;
    padding-right: 0;
    text-indent: 17px;
  }
}

